Fix css so round # and score don't overlap

--- a/experiments/spatialReference/index.css
+++ b/experiments/spatialReference/index.css
@@ -58,8 +58,10 @@ html , body {
 }
 
 #score {
-  text-align: center;
-  margin-left: 75%;
+    text-align: center;
+    height: 2%;
+    width: 8%;
+  margin-left: 90%;
   margin-right: auto;
   margin-bottom: auto ;
   left:0; right:0; top:2%; bottom: 0;
